# BioRazer-Extensions

./: .gitignore  pyproject.toml
biorazer_ex/apps/: __init__.py  basic.py
biorazer_ex/apps/MASTER/: config.py  execution.py
biorazer_ex/apps/PULCHRA/: execution.py
biorazer_ex/apps/Rosetta/: blueprint.py  execution.py  resfile.py
biorazer_ex/apps/UniDesign/: config.py  execution.py
biorazer_ex/apps/fpocket/: __init__.py  execution.py
biorazer_ex/apps/master/: execution.py
biorazer_ex/apps/pulchra/: execution.py
biorazer_ex/apps/reduce/: execution.py
biorazer_ex/apps/rosetta/: __init__.py  blueprint_archive.py  scorefile.py
biorazer_ex/apps/unidesign/: __init__.py  config.py
biorazer_ex/biotite_ex/: __init__.py  structure.py
biorazer_ex/gpu_apps/prediction_DL/: analysis_basic.py  execution_basic.py
biorazer_ex/py_apps/pyrosetta_ex/: utils.py
biorazer_ex/pyrosetta_ex/: utils.py
biorazer_ex/rosetta_ex/: blueprint.py
biorazer_ex/utils/: __init__.py
biorazer_toolkit/apis/nvidia/: colabfold_msa_search.py
biorazer_toolkit/apps/: basic.py  logging.py
biorazer_toolkit/apps/fpocket/: __init__.py
biorazer_toolkit/apps/master/: util.py
biorazer_toolkit/apps/reduce/: execution.py
biorazer_toolkit/apps/rosetta/: execution.py
biorazer_toolkit/apps/unidesign/: __init__.py  analysis.py  execution.py  resfile.py
biorazer_toolkit/utils/: structure_file.py
notebooks/: DeepEnzyme.ipynb  EvolvePro.ipynb  MMseqs2_ColabFold.ipynb  OSTIR.ipynb  Protenix.ipynb  jackhhmer_msa.ipynb
notebooks/DNA Chisel/: Optimize_DNA.ipynb
(+30 files in other folders)
